# NPET-communication-FW

./: .gitignore  CMakeLists.txt  LICENSE  MANUAL.md  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  coverage-badge.json  embed_text_file.py  vcpkg.json
.github/workflows/: testing_pipeline.yml  third_party_notices.yml
cmake/: generate_git_tag.cmake  generate_third_party_notices.cmake
src/: bindings_to_python.cpp  main.cpp
src/cli/: NPET_comm_CLI.cpp  NPET_comm_CLI.h  cli.cpp  cli.h  embed_manual.py  meas_reader_CLI.cpp  meas_reader_CLI.h  measurement_reader_CLI.cpp  measurement_reader_CLI.h  ntp_sync.cpp  ntp_sync.h
src/framework/: NPET_comm.cpp  NPET_comm.h  helper_func.cpp  helper_func.h  logging.cpp  logging.h  meas_func.cpp  meas_func.h  meas_reader.cpp  meas_reader.h  measurement_reader.cpp  measurement_reader.h
src/icon/: app.rc
src/virtual_machine/: virtual_machine.cpp  virtual_machine.h
tests/: CMakeLists.txt
tests/tests_framework/: test_NPET_comm.cpp  test_NPET_comm.h  test_helper_func.cpp  test_helper_func.h  test_logging.cpp  test_logging.h  test_meas_func.cpp  test_meas_func.h  test_meas_reader.cpp  test_meas_reader.h  test_meas_struct.cpp  test_meas_struct.h  test_measurement_reader.cpp  test_measurement_reader.h
